Kora/envoy/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/booking-service"
                route:
                  cluster: booking-service
              - match:
                  prefix: "/cook-service"
                route:
                  cluster: cook-service
              - match:
                  prefix: "/host-service"
                route:
                  cluster: host-service
              - match:
                  prefix: "/notification-service"
                route:
                  cluster: notification-service
              - match:
                  prefix: "/payment-service"
                route:
                  cluster: payment-service
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: booking-service
    connect_timeout: 0.25s
    type: strict_dns
    hosts:
    - socket_address:
        address: booking-management-service
        port_value: 5002
  - name: cook-service
    connect_timeout: 0.25s
    type: strict_dns
    hosts:
    - socket_address:
        address: cook-management-service
        port_value: 5001
  - name: host-service
    connect_timeout: 0.25s
    type: strict_dns
    hosts:
    - socket_address:
        address: host-management-service
        port_value: 5000
  - name: notification-service
    connect_timeout: 0.25s
    type: strict_dns
    hosts:
    - socket_address:
        address: notification-management-server
        port_value: 5004
  - name: payment-service
    connect_timeout: 0.25s
    type: strict_dns
    hosts:
    - socket_address:
        address: payment-service
        port_value: 5003

  # - name: service2
  #   connect_timeout: 0.25s
  #   type: strict_dns
  #   lb_policy: round_robin
  #   http2_protocol_options: {}
  #   load_assignment:
  #     cluster_name: service2
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: service2
  #               port_value: 80
# admin:
#   access_log_path: "/dev/null"
#   address:
#     socket_address:
#       address: 0.0.0.0
#       port_value: 8001
